fix: docker compose

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,16 @@
-# Database Configuration
+# Port Configuration
+PM_PORT=8082
+SM_PORT=8080
+PS_PORT=8081
+ASSET_PORT=9090
+
+# Auth0 Configuration
+AUTH0_AUDIENCE= # Auth0 Audience
+AUTH_SERVER_URI= # Auth0 Server URI
+AUTH_CLIENT_ID= # Auth0 Client ID
+AUTH_CLIENT_SECRET= # Auth0 Client Secret
+
+# Database configuration
 PM_DB_NAME= # Permission Manager Database Name
 PM_DB_USER= # Permission Manager Database User
 PM_DB_PASSWORD= # Permission Manager Database Password
@@ -6,27 +18,3 @@ PM_DB_PASSWORD= # Permission Manager Database Password
 SM_DB_NAME= # Snippet Manager Database Name
 SM_DB_USER= # Snippet Manager Database User
 SM_DB_PASSWORD= # Snippet Manager Database Password
-
-# Spring DataSource Configuration
-PM_SPRING_URL= # Permission Manager Spring DataSource URL
-PM_SPRING_USER= # Permission Manager Spring DataSource User
-PM_SPRING_PASSWORD= # Permission Manager Spring DataSource Password
-
-SM_SPRING_URL= # Snippet Manager Spring DataSource URL
-SM_SPRING_USER= # Snippet Manager Spring DataSource User
-SM_SPRING_PASSWORD= # Snippet Manager Spring DataSource Password
-
-PS_SPRING_URL= # Print Script Spring DataSource URL
-PS_SPRING_USER= # Print Script Spring DataSource User
-PS_SPRING_PASSWORD= # Print Script Spring DataSource Password
-
-# Port Configuration
-PM_PORT= # Permission Manager Port
-SM_PORT= # Snippet Manager Port
-PS_PORT= # Print Script Port
-
-# Auth0 Configuration
-AUTH0_AUDIENCE= # Auth0 Audience
-AUTH_SERVER_URI= # Auth0 Server URI
-AUTH_CLIENT_ID= # Auth0 Client ID
-AUTH_CLIENT_SECRET= # Auth0 Client Secret
