--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,7 +77,9 @@ jobs:
           EOF
 
       - name: Cleanup PEM Key
-        if: success() || failure()
+        if: always()
         run: |
-          ssh-agent -k
+          if [ -n "$SSH_AGENT_PID" ]; then
+            ssh-agent -k
+          fi
           rm -f vm_key.pem
