--- a/conf.d/server.conf
+++ b/conf.d/server.conf
@@ -1,5 +1,27 @@
 server {
     listen 80;
+    listen [::]:80;
+
+    server_name snippetsearcherdev.westus2.cloudapp.azure.com www.snippetsearcherdev.westus2.cloudapp.azure.com;
+    server_tokens off;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://snippetsearcherdev.westus2.cloudapp.azure.com$request_uri;
+    }
+}
+
+server {
+    listen 443 default_server ssl http2;
+    listen [::]:443 ssl http2;
+
+    server_name snippetsearcherdev.westus2.cloudapp.azure.com;
+
+    ssl_certificate /etc/nginx/ssl/live/snippetsearcherdev.westus2.cloudapp.azure.com/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/snippetsearcherdev.westus2.cloudapp.azure.com/privkey.pem;
 
     location / {
         proxy_pass http://printscript-ui:80/;
