--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -112,6 +112,12 @@ services:
     networks:
       - app-network
 
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+      - ./certbot/www/:/var/www/certbot/:rw
+      - ./certbot/conf/:/etc/letsencrypt/:rw
+
 volumes:
   permission_data:
   snippet_data:
