--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -107,8 +107,10 @@ services:
     image: nginx
     ports:
       - "80:80"
+      - "443:433"
     volumes:
       - ./conf.d:/etc/nginx/conf.d:ro
+      - ./certbot/www/:/var/www/certbot/:ro
     networks:
       - app-network
 
