--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -115,15 +115,14 @@ services:
       - "443:433"
     volumes:
       - ./conf.d:/etc/nginx/conf.d:ro
-      - ./data/letsencrypt:/etc/letsencrypt
-      - ./data/www:/var/www/html
+      - ./certbot/www/:/var/www/certbot/:ro
     networks:
       - app-network
 
   certbot:
     image: certbot/certbot:latest
     volumes:
-      - ./data/www:/var/www/html
+      - ./certbot/www/:/var/www/certbot/:rw
       - ./certbot/conf/:/etc/letsencrypt/:rw
 
 volumes:
