--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -114,8 +114,9 @@ services:
       - "80:80"
       - "443:433"
     volumes:
-      - ./conf.d:/etc/nginx/conf.d:ro
-      - ./certbot/www/:/var/www/certbot/:ro
+      - ./conf.d/:/etc/nginx/conf.d/:ro
+      - ./certbot/www:/var/www/certbot/:ro
+      - ./certbot/conf/:/etc/nginx/ssl/:ro
     networks:
       - app-network
 
