--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -112,19 +112,19 @@ services:
       - printscript-ui
     ports:
       - "80:80"
-      - "443:433"
+      - "443:443"
     volumes:
       - ./conf.d/:/etc/nginx/conf.d/:ro
-      - ./certbot/www:/var/www/certbot/:ro
-      - ./certbot/conf/:/etc/nginx/ssl/:ro
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
     networks:
       - app-network
 
   certbot:
     image: certbot/certbot:latest
     volumes:
-      - ./certbot/www/:/var/www/certbot/:rw
-      - ./certbot/conf/:/etc/letsencrypt/:rw
+      - ./certbot/www/:/var/www/certbot/
+      - ./certbot/conf/:/etc/letsencrypt
 
 volumes:
   permission_data:
