feat: new relic

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,7 @@ PM_DB_PASSWORD= # Permission Manager Database Password
 SM_DB_NAME= # Snippet Manager Database Name
 SM_DB_USER= # Snippet Manager Database User
 SM_DB_PASSWORD= # Snippet Manager Database Password
+
+PM_NEWRELIC= # New rewlic Key
+SM_NEWRELIC= # New rewlic Key
+PS_NEWRELIC= # New rewlic Key
