--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -59,6 +59,7 @@ services:
       AUTH_CLIENT_SECRET: ${AUTH_CLIENT_SECRET}
       PRINTSCRIPT_HOST: http://printscript-service:8080
       ASSET_HOST: http://asset-service:8080
+      NEW_RELIC_LICENSE_KEY: ${SM_NEWRELIC}
     depends_on:
       - snippet-manager-db
       - asset-service
@@ -78,6 +79,7 @@ services:
       AUTH_SERVER_URI: ${AUTH_SERVER_URI}
       AUTH_CLIENT_ID: ${AUTH_CLIENT_ID}
       AUTH_CLIENT_SECRET: ${AUTH_CLIENT_SECRET}
+      NEW_RELIC_LICENSE_KEY: ${PM_NEWRELIC}
     depends_on:
       - permission-manager-db
     networks:
@@ -92,6 +94,7 @@ services:
       AUTH_CLIENT_ID: ${AUTH_CLIENT_ID}
       AUTH_CLIENT_SECRET: ${AUTH_CLIENT_SECRET}
       SNIPPETMANAGER_HOST: http://snippet-manager:8080
+      NEW_RELIC_LICENSE_KEY: ${PS_NEWRELIC}
     networks:
       - app-network
 
