add new relic service names

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,10 @@ SM_DB_NAME= # Snippet Manager Database Name
 SM_DB_USER= # Snippet Manager Database User
 SM_DB_PASSWORD= # Snippet Manager Database Password
 
-PM_NEWRELIC= # New rewlic Key
-SM_NEWRELIC= # New rewlic Key
-PS_NEWRELIC= # New rewlic Key
+PM_NEWRELIC_KEY= # New rewlic Key
+SM_NEWRELIC_KEY= # New rewlic Key
+PS_NEWRELIC_KEY= # New rewlic Key
+
+PM_NEWRELIC_NAME= # New rewlic Key
+SM_NEWRELIC_NAME= # New rewlic Key
+PS_NEWRELIC_NAME= # New rewlic Key
