--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -59,7 +59,8 @@ services:
       AUTH_CLIENT_SECRET: ${AUTH_CLIENT_SECRET}
       PRINTSCRIPT_HOST: http://printscript-service:8080
       ASSET_HOST: http://asset-service:8080
-      NEW_RELIC_LICENSE_KEY: ${SM_NEWRELIC}
+      NEW_RELIC_LICENSE_KEY: ${SM_NEWRELIC_KEY}
+      NEW_RELIC_APP_NAME: ${SM_NEWRELIC_NAME}
     depends_on:
       - snippet-manager-db
       - asset-service
@@ -79,7 +80,8 @@ services:
       AUTH_SERVER_URI: ${AUTH_SERVER_URI}
       AUTH_CLIENT_ID: ${AUTH_CLIENT_ID}
       AUTH_CLIENT_SECRET: ${AUTH_CLIENT_SECRET}
-      NEW_RELIC_LICENSE_KEY: ${PM_NEWRELIC}
+      NEW_RELIC_LICENSE_KEY: ${PM_NEWRELIC_KEY}
+      NEW_RELIC_APP_NAME: ${PM_NEWRELIC_NAME}
     depends_on:
       - permission-manager-db
     networks:
@@ -94,7 +96,8 @@ services:
       AUTH_CLIENT_ID: ${AUTH_CLIENT_ID}
       AUTH_CLIENT_SECRET: ${AUTH_CLIENT_SECRET}
       SNIPPETMANAGER_HOST: http://snippet-manager:8080
-      NEW_RELIC_LICENSE_KEY: ${PS_NEWRELIC}
+      NEW_RELIC_LICENSE_KEY: ${PM_NEWRELIC_KEY}
+      NEW_RELIC_APP_NAME: ${PM_NEWRELIC_NAME}
     networks:
       - app-network
 
