fix env variable names

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -96,8 +96,8 @@ services:
       AUTH_CLIENT_ID: ${AUTH_CLIENT_ID}
       AUTH_CLIENT_SECRET: ${AUTH_CLIENT_SECRET}
       SNIPPETMANAGER_HOST: http://snippet-manager:8080
-      NEW_RELIC_LICENSE_KEY: ${PM_NEWRELIC_KEY}
-      NEW_RELIC_APP_NAME: ${PM_NEWRELIC_NAME}
+      NEW_RELIC_LICENSE_KEY: ${PS_NEWRELIC_KEY}
+      NEW_RELIC_APP_NAME: ${PS_NEWRELIC_NAME}
     networks:
       - app-network
 
