--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,6 @@
 services:
   permission-manager-db:
-    image: postgres
+    image: postgres:16
     ports:
       - "5432:5432"
     environment:
@@ -13,7 +13,7 @@ services:
       - app-network
 
   snippet-manager-db:
-    image: postgres
+    image: postgres:16
     ports:
       - "5431:5432"
     environment:
