make infra more configurable

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+TAG= # dev or latest
+
 # Port Configuration
 PM_PORT=8082
 SM_PORT=8080
@@ -10,6 +12,10 @@ AUTH_SERVER_URI= # Auth0 Server URI
 AUTH_CLIENT_ID= # Auth0 Client ID
 AUTH_CLIENT_SECRET= # Auth0 Client Secret
 
+AUTH0_AUDIENCE_API=***
+AUTH_CLIENT_ID_API=***
+AUTH_CLIENT_SECRET_API=***
+
 # Database configuration
 PM_DB_NAME= # Permission Manager Database Name
 PM_DB_USER= # Permission Manager Database User
@@ -19,9 +25,7 @@ SM_DB_NAME= # Snippet Manager Database Name
 SM_DB_USER= # Snippet Manager Database User
 SM_DB_PASSWORD= # Snippet Manager Database Password
 
-PM_NEWRELIC_KEY= # New rewlic Key
-SM_NEWRELIC_KEY= # New rewlic Key
-PS_NEWRELIC_KEY= # New rewlic Key
+NEWRELIC_KEY= # New rewlic Key
 
 PM_NEWRELIC_NAME= # New rewlic Key
 SM_NEWRELIC_NAME= # New rewlic Key
