--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,7 @@ services:
       PERMISSION_HOST: http://permission-manager:8080
       NEW_RELIC_LICENSE_KEY: ${NEWRELIC_KEY}
       NEW_RELIC_APP_NAME: ${SM_NEWRELIC_NAME}
+      REDIS_HOST: redis
     depends_on:
       - snippet-manager-db
       - asset-service
@@ -107,6 +108,14 @@ services:
     networks:
       - app-network
 
+  redis:
+    container_name: "event-bus"
+    image: redis:6-alpine
+    ports:
+      - "6379:6379"
+    networks:
+      - app-network
+
   printscript-ui:
     image: ghcr.io/ingsis15/printscript-ui:latest
     networks:
@@ -124,7 +133,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./conf.d/${TAG}-server.conf:/etc/nginx/conf.d/.ro
+      - ./conf.d/${TAG}-server.conf:/etc/nginx/conf.d/deafult.conf:ro
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
     networks:
