add permission env variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,6 +86,9 @@ services:
       AUTH_SERVER_URI: ${AUTH_SERVER_URI}
       AUTH_CLIENT_ID: ${AUTH_CLIENT_ID}
       AUTH_CLIENT_SECRET: ${AUTH_CLIENT_SECRET}
+      AUTH0_AUDIENCE_API: ${AUTH0_AUDIENCE_API}
+      AUTH_CLIENT_ID_API: ${AUTH_CLIENT_ID_API}
+      AUTH_CLIENT_SECRET_API: ${AUTH_CLIENT_SECRET_API}
       NEW_RELIC_LICENSE_KEY: ${NEWRELIC_KEY}
       NEW_RELIC_APP_NAME: ${PM_NEWRELIC_NAME}
 
