--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -108,6 +108,8 @@ services:
       SNIPPETMANAGER_HOST: http://snippet-manager:8080
       NEW_RELIC_LICENSE_KEY: ${NEWRELIC_KEY}
       NEW_RELIC_APP_NAME: ${PS_NEWRELIC_NAME}
+      ASSET_HOST: http://asset-service:8080
+      REDIS_HOST: redis
     networks:
       - app-network
 
