--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,6 +54,7 @@ jobs:
               docker compose up -d --no-deps --build $SERVICE_NAME
             else
               echo "Deploying full stack"
+              git pull
               docker compose down
               docker compose pull
               docker compose up -d --build
