--- a/conf.d/latest-server.conf
+++ b/conf.d/latest-server.conf
@@ -34,6 +34,10 @@ server {
         proxy_set_header Authorization $http_authorization;
     }
 
+    location /api/snippet/v1/snippet/status {
+        return 403;
+    }
+
     location /api/snippet/ {
         proxy_pass http://snippet-manager:8080/;
         proxy_set_header Host $host;
