--- a/.github/workflows/continuous_deployment.yml
+++ b/.github/workflows/continuous_deployment.yml
@@ -10,7 +10,7 @@ jobs:
   deploy_dev:
     name: Deploy to dev VM
     if: github.ref == 'refs/heads/dev'
-    uses: IngSis15/infra/.github/workflows/deploy.yml@main
+    uses: IngSis15/infra/.github/workflows/deploy.yml@dev
     with:
       environment: "dev"
     secrets:
