--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,6 @@ SM_DB_PASSWORD= # Snippet Manager Database Password
 
 NEWRELIC_KEY= # New rewlic Key
 
-PM_NEWRELIC_NAME= # New rewlic Key
-SM_NEWRELIC_NAME= # New rewlic Key
-PS_NEWRELIC_NAME= # New rewlic Key
+PM_NEWRELIC_NAME= # New relic Key
+SM_NEWRELIC_NAME= # New relic Key
+PS_NEWRELIC_NAME= # New relic Key
